# CHIP-8

./: .gitignore  CMakeLists.txt  chip8.c
include/: chip8_operations.h
src/: chip8_operations.c
